# dartforge

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  index.html  index.web.html  netlify.toml  package-lock.json  package.json  vite.config.web.ts
.github/workflows/: build-release.yml  ci.yml  release.yml  version-bump.yml
docs/: AUTOMAPPER-ROADMAP.md  PLAN-embedded-llm.md  PLAN.md
proxy/: Cargo.toml  Dockerfile  fly.toml
proxy-worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
proxy-worker/src/: MudProxy.ts  index.ts  telnet.ts
proxy/src/: main.rs
scripts/: analyze-hex-art.cjs  bump-version.sh  generate-og.ts  import-mushclient.cjs  test-hex-parser.ts
src/: App.tsx  index.css  main.tsx  main.web.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.claude/: ralph-loop.local.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ansi.rs  companion.rs  companion_page.html  connection.rs  events.rs  lib.rs  main.rs  storage.rs
src/components/: AliasPanel.tsx  AllocPanel.tsx  BabelPanel.tsx  BadgePill.tsx  ChatMessageRow.tsx  ChatPanel.tsx  ClassModeToggle.tsx  CollapsedPanelStrip.tsx  ColorSettings.tsx  CommandInput.tsx  CompanionQRDialog.tsx  ConfirmDeleteButton.tsx  ConnectionDot.tsx  CounterPanel.tsx  CurrencyPanel.tsx  CurrencyPopover.tsx  DataDirSettings.tsx  DropboxButton.tsx  DropboxFolderPicker.tsx  ErrorBoundary.tsx  FilterPill.tsx  FontSizeControl.tsx  GameClock.tsx  HelpPanel.tsx  HelpSection.tsx  IconButton.tsx  IdentifyForm.tsx  (+40 more)
(+136 files in other folders)
