[package]
name = "dartforge-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
