[package]
name = "dartforge"
version = "0.1.0"
description = "DartForge — DartMUD Client"
authors = ["you"]
edition = "2021"

[lib]
name = "dartforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt", "time"] }
log = "0.4"
env_logger = "0.11"
